# ft2-plugin

./: .gitignore  LICENSES.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-plugin.yml
plugin/: CHANGELOG.md  CMakeLists.txt  LICENSE  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UpdateChecker.cpp  UpdateChecker.h  make-vst3.sh  make.macos.sh  make.sh
plugin/helpdata/: FT2_PLUGIN.HLP  ft2_plugin_help_data.h  make_help_data.sh
src/: ft2_instance.c  ft2_instance.h  ft2_tables_plugin.c
src/plugin/: ft2_plugin_about.c  ft2_plugin_about.h  ft2_plugin_bmp.c  ft2_plugin_bmp.h  ft2_plugin_callbacks.c  ft2_plugin_callbacks.h  ft2_plugin_checkboxes.c  ft2_plugin_checkboxes.h  ft2_plugin_config.c  ft2_plugin_config.h  ft2_plugin_dialog.c  ft2_plugin_dialog.h  ft2_plugin_diskop.c  ft2_plugin_diskop.h  ft2_plugin_echo_panel.c  ft2_plugin_echo_panel.h  ft2_plugin_filter_panel.c  ft2_plugin_filter_panel.h  ft2_plugin_gui.c  ft2_plugin_gui.h  ft2_plugin_help.c  ft2_plugin_help.h  ft2_plugin_input.c  ft2_plugin_input.h  ft2_plugin_instr_ed.c  ft2_plugin_instr_ed.h  ft2_plugin_instrsw.c  ft2_plugin_instrsw.h  ft2_plugin_interpolation.c  ft2_plugin_interpolation.h  ft2_plugin_layout.c  ft2_plugin_layout.h  ft2_plugin_load_mod.c  ft2_plugin_load_mod.h  ft2_plugin_load_s3m.c  ft2_plugin_load_s3m.h  ft2_plugin_loader.c  ft2_plugin_loader.h  ft2_plugin_mem_reader.h  ft2_plugin_mix_panel.c  (+41 more)
